--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -4,6 +4,7 @@
     <h1>Dashboard</h1>
 </div>
 
+<!-- Profile Box Section -->
 <div>
     <div class="profile-box">
         <img src="{{ url_for('static', filename='user_images/' ~ user.picture) }}" alt="Picture" class="profile-image">
@@ -15,10 +16,6 @@
     </div>
 </div>
 
-<!-- Buttons to toggle the content -->
-<div>
-    
-</div>
 
 <!-- Sections that will be shown/hidden -->
 <div id="games" class="section">
