--- a/app/templates/add_company.html
+++ b/app/templates/add_company.html
@@ -15,21 +15,25 @@
           <button type="submit" id="submit-company-series-Button">Add Series</button>
         </form>
     </div>
-</div>
+</div> <!--series popup section for adding series-->
 
 <div>
+    <!--Form for adding a new company-->
     <form method="POST"  id="submit_company_form" enctype="multipart/form-data" action="{{ url_for('add_company') }}">
         {{ company_form.hidden_tag() }}
+        <!-- Input field for company name -->
         Name(required):<br><br>
           <input type="text" class="add_stuff_bar" maxlength="20" name="company_name" placeholder="Company name(maxlength = 20)">
               {% if company_form.company_name.errors %}
                 <span class="error-message">{{ company_form.company_name.errors[0] }}</span>
               {% endif %}
               <br><br>
-    
+
+              <!-- Note for users regarding adding games -->
               <p>
                 <p class="note">&#10024If game is not in the list, submit this company and then go to add game page to add the corresponding game&#10024</p>
                 <br>
+                <!-- Button to toggle visibility of game selection dropdown -->
                 <button type="button" id="toggleCompanyGames" class="toggle-button">
                   Select Games <span class="arrow-down" id="arrowCompanyGames">&#9662;</span>
                 </button>
@@ -44,9 +48,10 @@
               </p>
               <br><br>
               
-              <p>
+              <p><!-- Note for users regarding adding directors -->
                 <p class="note">&#10024If director is not in the list, submit this company and then go to add director page to add the corresponding director&#10024</p>
                 <br>
+                <!-- Button to toggle visibility of director selection dropdown -->
                 <button type="button" id="toggleCompanyDirectors" class="toggle-button">
                   Select directors <span class="arrow-down" id="arrowCompanyDirectors">&#9662;</span>
                 </button>
@@ -61,9 +66,10 @@
               </p>
               <br><br>
               
-              <p>
+              <p><!-- Note for users regarding adding founders -->
                 <p class="note">&#10024If founder is not in the list, submit this company and then go to add founder page to add the corresponding founder&#10024</p>
                 <br>
+                <!-- Button to toggle visibility of director selection dropdown -->
                 <button type="button" id="toggleCompanyFounders" class="toggle-button">
                   Select founders <span class="arrow-down" id="arrowCompanyFounders">&#9662;</span>
                 </button>
@@ -78,7 +84,7 @@
               </p>
               <br><br>
 
-              <p>
+              <p><!--selecting series list -->
                 <button type="button" id="toggleCompanySeries" class="toggle-button">
                   Select Series(required) <span class="arrow-down" id="arrowCompanySeries">&#9662;</span>
                 </button>
@@ -96,28 +102,32 @@
                 </div>
               </p>
               <br><br>
-
+        
+        <!--Input field for founded date-->
         Founded date(required):<br><br>
         <input type="text" class="add_stuff_bar" maxlength="20" name="company_time_founded" placeholder="founded time(maxlength = 20)">
           {% if company_form.company_time_founded.errors %}
             <span class="error-message">{{ company_form.company_time_founded.errors[0] }}</span>
           {% endif %}
           <br><br>
-
+        
+        <!-- Input field for headquarters location -->
         Headquarters location(required):<br><br>
         <input type="text" class="add_stuff_bar" maxlength="20" name="company_headquarters" placeholder="Headquarters(maxlength = 20)">
           {% if company_form.company_headquarters.errors %}
             <span class="error-message">{{ company_form.company_headquarters.errors[0] }}</span>
           {% endif %}
           <br><br>
-
+        
+        <!-- Input field for company description -->
         Description(required):<br><br>
           <textarea maxlength="630" class="text-area" name="company_description" placeholder="Add description(maxlength = 630)" rows="13" cols="80"></textarea>
             {% if company_form.company_description.errors %}
               <span class="error-message">{{ company_form.company_description.errors[0] }}</span>
             {% endif %}
             <br><br>
-
+            
+            <!-- Section for adding pictures -->
             Add pictures(JPG ONLY!):
             <br><br>
             <div class="add-stuff-images">
@@ -132,7 +142,7 @@
               {% endif %}
             </div>
             <br><br>
-            
+        <!-- Submit button for adding the company -->
         <button type="submit" id="submit-company-Button">Add company</button>
     </form>
 </div>
