--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,25 +4,25 @@
 <div class="login-register-box">
     <div class="page-name">
         Login
-    </div>
+    </div><!--login form-->
     <form method="POST" id="submit_login_form" action="{{ url_for('login') }}">
         {{ login_form.hidden_tag() }}
         <div>
-            <p>Email</p><br>
+            <p>Email</p><br><!--email-->
             <input type="text" class="add_stuff_bar" maxlength="20" name="login_user_email" placeholder="Email(maxlength = 20)">
             {% if login_form.login_user_email.errors %}
             <span class="error-message">{{ login_form.login_user_email.errors[0] }}</span>
             {% endif %}
         </div>
         <div>
-            <p>Password</p><br>
+            <p>Password</p><br><!--password-->
             <input type="password" class="add_stuff_bar" maxlength="20" name="login_user_password" placeholder="password(maxlength = 20)">
             {% if login_form.login_user_password.errors %}
             <span class="error-message">{{ login_form.login_user_password.errors[0] }}</span>
             {% endif %}
         </div>
-        <button type="submit" id="submit-login-Button">Login</button>
+        <button type="submit" id="submit-login-Button">Login</button><!--submit-->
     </form>
-    <a href="/register">Don't have an account? Register</a>
+    <a href="/register">Don't have an account? Register</a><!--register link-->
 </div>
 {% endblock %}
